@@ -443,21 +443,15 @@ void cmpversions(const char *const *argv) {
 
   if (*argv[0] && strcmp(argv[0],"<unknown>")) {
     emsg= parseversion(&a,argv[0]);
-    if (emsg) {
-      printf(_("dpkg: version '%s' has bad syntax: %s\n"), argv[0], emsg);
-      m_output(stdout, _("<standard output>"));
-      exit(1);
-    }
+    if (emsg)
+      ohshit(_("version '%s' has bad syntax: %s"), argv[0], emsg);
   } else {
     blankversion(&a);
   }
   if (*argv[2] && strcmp(argv[2],"<unknown>")) {
     emsg= parseversion(&b,argv[2]);
-    if (emsg) {
-      printf(_("dpkg: version '%s' has bad syntax: %s\n"), argv[2], emsg);
-      m_output(stdout, _("<standard output>"));
-      exit(1);
-    }
+    if (emsg)
+      ohshit(_("version '%s' has bad syntax: %s"), argv[2], emsg);
   } else {
     blankversion(&b);
   }
