@@ -47,6 +47,7 @@ dpkg (1.15.4) UNRELEASED; urgency=low
   * Allow quoting values in configuration file options.
   * Add new --pre-invoke and --post-invoke hooks in dpkg.
   * Add new --control-path command to dpkg-query.
+  * Use ohshit on bad version syntax in --compare-versions.
 
   [ Raphael Hertzog ]
   * Replace install-info by a wrapper around GNU's install-info. The wrapper
